--- a/test/catalog/test.twig
+++ b/test/catalog/test.twig
@@ -1,5 +1,3 @@
 YOU ARE NOT SEEING THIS
-<!--//-nmn test pos:"before" line: <\?php echo "test php string"; ?\>-->
-test public twig content
-<!--//-nmn-->
+<!--//-nmn 5lifqkjx1u259l -->
 YOU ARE NOT SEEING THIS
