Created working modification parsing and working template creating

--- a/test/catalog/test.twig
+++ b/test/catalog/test.twig
@@ -1,3 +1,5 @@
 YOU ARE NOT SEEING THIS
-<!--//-nmn 5lifqkjx1u259l -->
+<!--//-nmn test pos:"before" line: <\?php echo "test php string"; ?\>-->
+test public twig content
+<!--//-nmn-->
 YOU ARE NOT SEEING THIS
