--- a/templates/modification.xml
+++ b/templates/modification.xml
@@ -1,6 +1,4 @@
 <operation>
-<search><![CDATA[{{search_string}}]]></search>
-<add position="{{position}}"><![CDATA[
-  {{modification_content}}
-]]></add>
+  <search><![CDATA[{{search_string}}]]></search>
+    <add position="{{position}}"><![CDATA[{{modification_content}}]]></add>
 </operation>
