Added php filter in html search, changed README

--- a/test/catalog/test.twig
+++ b/test/catalog/test.twig
@@ -1,5 +1,5 @@
 YOU ARE NOT SEEING THIS
-<!--//-nmn test pos:"before" line: <\?php echo "test php string"; ?\>-->
+<!--//-nmn-html test pos:"before" line: <\?php echo "test php string"; ?\>-->
 test public twig content
-<!--//-nmn-->
+<!--//-nmn-html-->
 YOU ARE NOT SEEING THIS
